# racing_report/request_main.py
@@ -1,8 +1,15 @@
 ###### import tools ######
 from flask import request
 from flask_restful import Resource
-from racing_report.bild_report import get_list_info, get_driver_info
-from racing_report.tools import response_format, from_class_list_to_dict, sort_incorrect_data
+from peewee import DoesNotExist, JOIN
+
+from database.models import Driver, Racing, Error
+from racing_report.tools import (
+    response_format,
+    from_class_list_to_dict_report,
+    from_class_list_to_dict_errors,
+    from_class_list_to_dict_drivers,
+)
 
 
 ###### racing results ######
@@ -16,16 +23,27 @@ class Report(Resource):
                 f"Wrong parameter 'order' -> '{order}'. Choose from between 'desc' and 'asc' (for example: '/drivers?order=asc')"
             )
         else:
-            racing_info = get_list_info(order, "time")
-            drivers_with_position = filter(lambda x: x.position, racing_info[0])
-            drivers_without_position = filter(lambda x: not x.position, racing_info[0])
-            results["drivers_with_position"] = from_class_list_to_dict(
+            order_by_arg = -Racing.position if order == "asc" else Racing.position
+            drivers_with_position = list(
+                Racing.select()
+                .where(Racing.position.is_null(False))
+                .order_by(order_by_arg)
+            )
+            drivers_without_position = (
+                Racing.select()
+                .join(Driver, JOIN.INNER)
+                .where(
+                    (Racing.position.is_null(True)) & (Racing.driver_id.is_null(False))
+                )
+            )
+            errors = list(Error.select())
+            results["drivers_with_position"] = from_class_list_to_dict_report(
                 drivers_with_position
             )
-            results["drivers_without_position"] = from_class_list_to_dict(
+            results["drivers_without_position"] = from_class_list_to_dict_report(
                 drivers_without_position
             )
-            results["errors"] = racing_info[1]
+            results["errors"] = from_class_list_to_dict_errors(errors)
         return response_format(results)
 
 
@@ -34,11 +52,21 @@ class Drivers(Resource):
     @staticmethod
     def get():
         results = dict()
-        racing_info = get_list_info("desc", "name")
-        sorted_drivers = sort_incorrect_data(tuple(racing_info[0]))
-        results["drivers"] = from_class_list_to_dict(sorted_drivers[0])
-        results["drivers_incor_data"] = from_class_list_to_dict(sorted_drivers[1])
-        results["errors"] = racing_info[1]
+        order = request.args.get("order", default="desc", type=str)
+        if order not in ("desc", "asc", ""):
+            results["errors"] = (
+                f"Wrong parameter 'order' -> '{order}'. Choose from between 'desc' and 'asc' (for example: '/drivers?order=asc')"
+            )
+        else:
+            order_by_arg = -Driver.abbr if order == "asc" else Driver.abbr
+            drivers = list(Driver.select().order_by(order_by_arg))
+            errors = list(
+                Error.select().where(
+                    Error.error_type == "wrong format of drivers`s data"
+                )
+            )
+            results["drivers"] = from_class_list_to_dict_drivers(drivers)
+            results["errors"] = from_class_list_to_dict_errors(errors)
         return response_format(results)
 
 
@@ -48,12 +76,10 @@ class AloneDriver(Resource):
     def get(driver_id):
         results = dict()
         try:
-            driver = get_driver_info(driver_id)
-            results["drivers"] = from_class_list_to_dict(
-                [
-                    driver,
-                ]
-            )
-        except ValueError:
+            race = [
+                Racing.get(abbr=driver_id),
+            ]
+            results["drivers"] = from_class_list_to_dict_report(race)
+        except DoesNotExist:
             results["errors"] = f"Wrong parameter 'driver_id' -> '{driver_id}'."
         return response_format(results)
